--- a/store/templates/store/navigation.html
+++ b/store/templates/store/navigation.html
@@ -16,12 +16,24 @@
                     <a href="{% url 'contact' %}" class="nav-link active">
                         Contact
                     </a>
-                </li>
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="" class="nav-link active">
+                    <a href="{% url 'logout' %}" class="nav-link active">
+                        Logout
+                    </a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url 'login' %}" class="nav-link active">
                         Login
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'register' %}" class="nav-link active">
+                        Register
+                    </a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
