--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -4,6 +4,11 @@
 
 {% block content %} 
  <div class=".mt-2.mb-4.px-4.py-2">
+    {% if request.user.is_authenticated %}
+    <h1 class="text-center mb-4">Nuevos Productos - {{request.user}}</h1>
+    {% else %}
+    <h1 class="text-center mb-4">Nuevos Productos</h1>
+    {% endif %}
     <h1 class="text-center mb-4">Nuevos productos</h1>
     <div class="container text-center">
         <div class="row justify-content-center">
