--- a/store/templates/store/navigation.html
+++ b/store/templates/store/navigation.html
@@ -1,4 +1,3 @@
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-control="navBarNav" aria-expanded="false" aria-label="Toggle Navigation"></button>
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <a href="{% url 'home' %}" class="navbar-brand">Marketplace</a>
@@ -16,23 +15,28 @@
                     <a href="{% url 'contact' %}" class="nav-link active">
                         Contact
                     </a>
+                </li>
+               
                 {% if request.user.is_authenticated %}
-                <li class="nav-item">
-                    <a href="{% url 'logout' %}" class="nav-link active">
-                        Logout
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'add_item'%}">Add Item</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'logout' %}" class="nav-link active">
+                            Logout
+                        </a>
+                    </li>
                 {% else %}
-                <li class="nav-item">
-                    <a href="{% url 'login' %}" class="nav-link active">
-                        Login
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'register' %}" class="nav-link active">
-                        Register
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}" class="nav-link active">
+                            Login
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'register' %}" class="nav-link active">
+                            Register
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
